--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <title>week</title>
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
 <body>
     <div id="app">
-        <h1>Hello App!</h1>
         <p>
-            <a v-link="{ path: '/foo' }">Go to Foo</a>
-            <a v-link="{ path: '/bar' }">Go to Bar</a>
+            <a v-link="{ path: '/week' }">周报</a>
+            <a v-link="{ path: '/gather' }">Go to gather</a>
         </p>
         <!-- use router-view element as route outlet -->
         <router-view></router-view>
     </div>
 </body>
+<script src="./node_modules/jquery/dist/jquery.js"></script>
 <script src="./dist/app.js"></script>
-
 </html>
