--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 <script src="./node_modules/vue/dist/vue.js"></script>
 <script src="./node_modules/vuex/dist/vuex.js"></script>
 
-<script src="./dist/app.js"></script>
+<script src="./dist/app.js?v=1"></script>
 
 </html>
